syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.checkers.grpc";
option java_outer_classname = "CheckersProto";

package checkers;

// ===== SERVIÇO PRINCIPAL =====
service CheckersGame {
  // Cliente se conecta e entra na fila
  rpc Connect(ConnectRequest) returns (ConnectResponse);
  
  // Stream bidirecional para o jogo
  rpc PlayGame(stream GameMessage) returns (stream GameMessage);
}

// ===== MENSAGENS DE REQUISIÇÃO =====
message ConnectRequest {
  string player_name = 1;
}

message ConnectResponse {
  string session_id = 1;
  string message = 2;
}

// ===== MENSAGEM GENÉRICA DO JOGO =====
message GameMessage {
  oneof message {
    WaitingForPlayer waiting = 1;
    GameStart start = 2;
    Move move = 3;
    MoveResult move_result = 4;
    OpponentMove opponent_move = 5;
    YourTurn your_turn = 6;
    GameOver game_over = 7;
    ErrorMessage error = 8;
  }
}

// ===== TIPOS DE MENSAGENS =====
message WaitingForPlayer {
  string message = 1;
  string player_name = 2;  // Nome do jogador enviado na primeira mensagem
}

message GameStart {
  enum Color {
    WHITE = 0;
    BLACK = 1;
  }
  Color your_color = 1;
  string opponent_name = 2;
}

message Move {
  int32 from_row = 1;
  int32 from_col = 2;
  int32 to_row = 3;
  int32 to_col = 4;
}

message MoveResult {
  bool valid = 1;
  string message = 2;
}

message OpponentMove {
  int32 from_row = 1;
  int32 from_col = 2;
  int32 to_row = 3;
  int32 to_col = 4;
}

message YourTurn {
  string message = 1;
}

message GameOver {
  string winner = 1;
  string reason = 2;
}

message ErrorMessage {
  string error = 1;
}
